--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@chakra-ui/core": "^0.7.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
+    "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.7.2",
