Player can now create a new game

--- a/package.json
+++ b/package.json
@@ -6,25 +6,30 @@
   "author": "igotlegs",
   "license": "MIT",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
-    "@chakra-ui/core": "^0.7.0",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "emotion-theming": "^10.0.27",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
+    "express-response-formatter": "^1.2.7",
+    "express-session": "^1.17.0",
+    "helmet": "^3.22.0",
     "immutable": "^4.0.0-rc.12",
+    "morgan": "^1.10.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-head": "^3.3.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
