--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "redis": "^3.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "ws": "^7.2.5"
   },
   "scripts": {
     "start-frontend": "react-scripts start",
     "build-frontend": "react-scripts build",
     "test-frontend": "react-scripts test",
     "eject": "react-scripts eject",
-    "build-server": "babel ./src/shared -w -d ./build/shared & babel ./src/server -w -d ./build/server",
-    "run-server": "node ./build/server/index.js"
+    "build-backend": "babel ./src/shared -w -d ./build/shared & babel ./src/server -w -d ./build/server",
+    "run-backend": "node ./build/server/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
